--- a/pom.xml
+++ b/pom.xml
@@ -25,7 +25,6 @@
     <modules>
         <module>ApiMonitor-System</module>
         <module>ApiMonitor-Common</module>
-        <module>MybatisPlus-CodeGenerator</module>
     </modules>
 
     <dependencyManagement>
@@ -39,7 +38,7 @@
             </dependency>
         </dependencies>
     </dependencyManagement>
-    <!-- 所有子项目都依赖的架包 -->
+    <!-- 所有子项目都依赖的jar包 -->
     <dependencies>
         <dependency>
             <groupId>com.zaxxer</groupId>
@@ -57,6 +56,7 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
@@ -65,6 +65,7 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter</artifactId>
