--- a/pom.xml
+++ b/pom.xml
@@ -25,6 +25,7 @@
     <modules>
         <module>ApiMonitor-System</module>
         <module>ApiMonitor-Common</module>
+        <module>MybatisPlus-code</module>
     </modules>
 
     <dependencyManagement>
